<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">login</string>
    <string name="loginName">login name</string>
    <string name="password">password</string>
    <string name="lab2switch">What does this do?</string>
    <string name="radioButton">Radio Button</string>
    <string name="checkBox">Check Box</string>
    <string name="camera">Camera Icon</string>
    <string name="loginButton">Login Button</string>
    <string name="dialog_message">Do you want to return to the previous page?</string>
    <string name="dialog_title">hello</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="startChatText">Start Chat</string>
    <string name="SendBut">SEND</string>
    <string name="weatherButton">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="TestToolbar">Test Toolbar</string>
    <string name="choice1">choice1</string>
    <string name="choice2">choice2</string>
    <string name="choice3">choice3</string>
    <string name="setting">about</string>
    <string name="title_activity_settings">Settings</string>
    <string name ="toolbar_title">Do you want to go back?</string>
    <string name="msg">Message</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
