<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_one"
        android:icon="@drawable/plastic_50_50"
        android:orderInCategory="51"
        android:showAsAction="always"
        android:title="@string/choice1" />

    <item
        android:id="@+id/action_two"
        android:icon="@drawable/plastic_50_50"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/choice2" />

    <item
        android:id="@+id/action_three"
        android:icon="@drawable/plastic_50_50"
        android:orderInCategory="151"
        android:showAsAction="always"
        android:title="@string/choice3" />

    <item
        android:id="@+id/action_four"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/setting" />

</menu>